; ModuleID = '/home/carl/AnghaBench/vlc/bin/extr_cachegen.c_main.c'
source_filename = "/home/carl/AnghaBench/vlc/bin/extr_cachegen.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"VLC_PLUGIN_PATH\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"--quiet\00", align 1
@.str.2 = private unnamed_addr constant [22 x i8] c"--reset-plugins-cache\00", align 1
@.str.3 = private unnamed_addr constant [3 x i8] c"--\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca [4 x i8*], align 16
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32 1, i32* %6, align 4
  %12 = load i32, i32* %6, align 4
  store i32 %12, i32* %7, align 4
  br label %13

13:                                               ; preds = %53, %2
  %14 = load i32, i32* %7, align 4
  %15 = load i32, i32* %4, align 4
  %16 = icmp slt i32 %14, %15
  br i1 %16, label %17, label %56

17:                                               ; preds = %13
  %18 = load i8**, i8*** %5, align 8
  %19 = load i32, i32* %7, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i8*, i8** %18, i64 %20
  %22 = load i8*, i8** %21, align 8
  store i8* %22, i8** %8, align 8
  %23 = load i8*, i8** %8, align 8
  %24 = call i64 @setenv(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8* %23, i32 1)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %17
  %27 = call i32 (...) @abort() #3
  unreachable

28:                                               ; preds = %17
  store i32 0, i32* %10, align 4
  %29 = load i32, i32* %10, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %10, align 4
  %31 = sext i32 %29 to i64
  %32 = getelementptr inbounds [4 x i8*], [4 x i8*]* %9, i64 0, i64 %31
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8** %32, align 8
  %33 = load i32, i32* %10, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %10, align 4
  %35 = sext i32 %33 to i64
  %36 = getelementptr inbounds [4 x i8*], [4 x i8*]* %9, i64 0, i64 %35
  store i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.2, i64 0, i64 0), i8** %36, align 8
  %37 = load i32, i32* %10, align 4
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* %10, align 4
  %39 = sext i32 %37 to i64
  %40 = getelementptr inbounds [4 x i8*], [4 x i8*]* %9, i64 0, i64 %39
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.3, i64 0, i64 0), i8** %40, align 8
  %41 = load i32, i32* %10, align 4
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds [4 x i8*], [4 x i8*]* %9, i64 0, i64 %42
  store i8* null, i8** %43, align 8
  %44 = load i32, i32* %10, align 4
  %45 = getelementptr inbounds [4 x i8*], [4 x i8*]* %9, i64 0, i64 0
  %46 = call i32* @libvlc_new(i32 %44, i8** %45)
  store i32* %46, i32** %11, align 8
  %47 = load i32*, i32** %11, align 8
  %48 = icmp eq i32* %47, null
  br i1 %48, label %49, label %50

49:                                               ; preds = %28
  store i32 1, i32* %3, align 4
  br label %57

50:                                               ; preds = %28
  %51 = load i32*, i32** %11, align 8
  %52 = call i32 @libvlc_release(i32* %51)
  br label %53

53:                                               ; preds = %50
  %54 = load i32, i32* %7, align 4
  %55 = add nsw i32 %54, 1
  store i32 %55, i32* %7, align 4
  br label %13

56:                                               ; preds = %13
  store i32 0, i32* %3, align 4
  br label %57

57:                                               ; preds = %56, %49
  %58 = load i32, i32* %3, align 4
  ret i32 %58
}

declare dso_local i64 @setenv(i8*, i8*, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2

declare dso_local i32* @libvlc_new(i32, i8**) #1

declare dso_local i32 @libvlc_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
